--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,10 +1,7 @@
-@import "_reset";
-@import "_variables";
-
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-color: $blue;
+  background-color: $cloudy;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,10 +11,6 @@ body {
 
 img {
   width: 100px;
-}
-
-footer {
-  // display: none;
 }
 
 h1 {
