--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,4 +1,4 @@
 footer.footer
-    //- .footer_icon
-        i.fab.fa-youtube
+    .footer_icon
+        i.fas.fa-shopping-bag
     span.footer_text #{siteName} #{new Date().getFullYear()} &copy; 
