--- a/assets/scss/config/_variables.scss
+++ b/assets/scss/config/_variables.scss
@@ -1,3 +1,7 @@
-$red: #ce4647;
 $blue: #2980b9;
 $cloudy: #ecf0f1;
+$red: #ea232c;
+$dark-red: #bb2f2a;
+$grey: #f5f5f5;
+$black: #444444;
+$dark-grey: #e7e7e7;
