--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,21 +1,11 @@
+html,
 body {
+  height: 100%;
+}
+body {
+  background-color: #f5f5f5;
+  color: black;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-color: $cloudy;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  height: 100vh;
-}
-
-img {
-  width: 100px;
-}
-
-h1 {
-  margin-top: 10px;
-  color: white;
-  font-size: 40px;
-  font-weight: 200;
+  font-size: 14px;
 }
