--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -3,6 +3,7 @@ header.header
         .header__column
             a(href=routes.home)
                 i.fas.fa-shopping-bag
+                h1 #{siteName}
         .header__column
             form(action=routes.search, method="get")
                 input(type="text", placeholder="Search by term...", name="term")
@@ -15,7 +16,7 @@ header.header
                         a(href=routes.login) Log In
                 else 
                     li
-                        a(href=`/videos${routes.upload}`) Upload
+                        a(href=`/items${routes.upload}`) Upload
                     li
                         a(href=routes.me) Profile
                     li
