--- a/views/home.pug
+++ b/views/home.pug
@@ -1,4 +1,12 @@
 extends layouts/main
+include mixins/itemBlock
 
 block content
-    h1 Welcome to "take-shop"
+    .home-items
+        each item in items 
+            +itemBlock({
+                id:item.id,
+                title:item.title,
+                views:item.views,
+                itemFile:item.fileUrl
+            })
