--- a/views/upload.pug
+++ b/views/upload.pug
@@ -4,7 +4,7 @@ block content
     .form-container
         form(action=`/items${routes.upload}`, method="post", enctype="multipart/form-data")
             div.fileUpload
-                label(for="file") Video File
+                label(for="file") Item File
                 input(type="file", id="file", name="itemFile", required=true, accept="image/*")
             input(type="text", placeholder="Title", name="title", required=true)
             textarea(name="description", placeholder="Description", required=true)
