# Item Detail done

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -6,3 +6,6 @@
 @import "./partials/header.scss";
 @import "./partials/footer.scss";
 @import "./partials/form.scss";
+@import "./partials/itemBlock.scss";
+
+@import "./pages/itemDetail.scss";
