--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -7,5 +7,5 @@
 @import "./partials/footer.scss";
 @import "./partials/form.scss";
 @import "./partials/itemBlock.scss";
-
+@import "./pages/home.scss";
 @import "./pages/itemDetail.scss";
