--- a/assets/scss/pages/itemDetail.scss
+++ b/assets/scss/pages/itemDetail.scss
@@ -2,6 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  // .item__box {
+  //   image {
+  //     width: 300px;
+  //     height: 300px;
+  //   }
+  // }
+
   .item__info {
     width: 100%;
     max-width: 850px;
