--- a/views/itemDetail.pug
+++ b/views/itemDetail.pug
@@ -1,6 +1,7 @@
 extends layouts/main
 
 block content
+    script(type="text/javascript", src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=73rh6nk3xa")
     .item-detail__container
         .item__box
             image(src=`/${item.fileUrl}`)
@@ -18,6 +19,9 @@ block content
             .item__author
                 |Uploaded by 
                 a(href=routes.userDetail(item.creator.id))=item.creator.name    
+        
+        .item__map(style="width:80%; height:400px" id="map")
+
         .item__comments
             if item.comments.length === 1
                 span.item__comment-number 1 comment
