--- a/views/upload.pug
+++ b/views/upload.pug
@@ -7,5 +7,6 @@ block content
                 label(for="file") Item File
                 input(type="file", id="file", name="itemFile", required=true, accept="image/*")
             input(type="text", placeholder="Title", name="title", required=true)
+            //- Upload GPS
             textarea(name="description", placeholder="Description", required=true)
             input(type="submit", value="Upload Item")
