--- a/assets/scss/pages/itemDetail.scss
+++ b/assets/scss/pages/itemDetail.scss
@@ -39,6 +39,12 @@
       font-size: 16px;
     }
   }
+
+  .item__map {
+    width: 80%;
+    height: 400px;
+  }
+
   .item__comments {
     margin-top: 25px;
     .item__comment-number {
