--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -4,11 +4,11 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.15.1/css/all.css", integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp",crossorigin="anonymous")
-        link(rel="stylesheet", href="css/styles.css")
+        link(rel="stylesheet", href="/css/styles.css")
         title #{pageTitle} | #{siteName}
     body
         include ../partials/header
         main
             block content
         include ../partials/footer
-        script(src="js/main.js")
+        script(src="/js/main.js")
